--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "doctrine/dbal": "^4.2",
         "laravel/framework": "^12.0",
         "laravel/socialite": "^5.20",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "spatie/laravel-sitemap": "^7.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
